Tue Nov 11 15:45:23 UTC 2003  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/OS_NS_stdlib.inl:
          Added #include of ace/os_include/os_search.h to get bsearch and other
          search functions

        * ace/WFMO_Reactor.i:
          Added #include of ace/Thread.h

Tue Nov 11 15:13:36 UTC 2003  Don Hinton  <dhinton@dresystems.com>

        * examples/ASX/CCM_App/Makefile:
          Added depend and realclean targets to force them to call
          Makefile.CCM_App. Updated dependencies.

        * examples/ASX/CCM_App/Makefile.CCM_App:
          Added MAKEFILE variable, and updated dependencies.

Mon Nov 10 17:02:37 2003  Jeff Parsons <j.parsons@vanderbilt.edu>

        * ace/CDR_Stream.i:

          Added cast to ACE_CDR::Boolean of return values where necessary in
          extraction methods, similarly to what is already in insertion
          methods. Thanks to Ted Mules <ned@technisyst.com.au> for the
          resulting warnings on MSVC at warning level 4. This closes
          [BUGID:1632].

Mon Nov 10 16:43:19 2003  Steve Huston  <shuston@riverace.com>

	* ace/Acceptor.cpp: Add #include "ace/OS_NS_stdio.h" to get sprintf()
	  and "ace/OS_NS_string.h" to get strdup().

	* ace/Svc_Conf_l.cpp: Add #include "ace/OS_NS_string.h" for strrchr().

	* ace/Synch_Traits.h: Add #include "ace/config-all.h" to find the
	  template and threads config settings.

	* ace/RMCast/RMCast_UDP_Proxy.cpp:
	* ace/RMCast/RMCast_IO_UDP.i: Added #include "ace/OS_Memory.h" to
	  get ACE_NEW_RETURN.

	* netsvcs/lib/Log_Message_Receiver.h: Add #include of either
	  "ace/Thread_Mutex.h" or "ace/Null_Mutex.h" for the ACE_Guard
	  template arg (ACE_SYNCH_MUTEX_T).

	* netsvcs/lib/TS_Clerk_Handler.h: Add #include
	  "ace/os_include/os_dirent.h" to get MAXNAMLEN.

	* netsvcs/lib/TS_Clerk_Handler.cpp: Add #include
	  "ace/OS_NS_string.h" to get strcat() and "ace/OS_NS_stdio.h" to
	  get sprintf().

	* netsvcs/lib/Client_Logging_Handler.cpp: Add #include